# GINTAMA-BOT

./: .gitignore  GINTAMA-BOT-AUDIT-REPORT.txt  JARVIS_MASTER_PLAN.txt  README.md  config.toml  install.bat  main.py  pyproject.toml  requirements.txt
agent/: agent.py  agent.toml
agent/handlers/: __init__.py  android.py  linux.py  windows.py
channels/: base_channel.py  discord_channel.py  telegram_channel.py  voice_channel.py
gateway/: web_gateway.py
logs/: .gitkeep
modules/: camera.py  constants.py  files.py  location.py  network.py  notify.py  phone.py  screen_record.py  system.py
skills/: backup.yaml  focus.yaml  meeting.yaml  morning.yaml  presentation.yaml  selfie.yaml  shutdown.yaml  summary.yaml
src/: agent_loop.py  cli.py  discovery.py  event_bus.py  event_monitor.py  executor.py  llm.py  logger.py  pairing_manager.py  parser.py  permission_registry.py  planner.py  rate_limiter.py  router.py  scheduler.py  security_audit.py  session_manager.py  tool_registry.py  tool_schemas.py
tools/: browser_tool.py  camera_tool.py  web_search_tool.py
web/: chat.html  dashboard.html
