[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tcc-jarvis"
version = "2.0.0"
description = "TCC — Terminal Command Center | Codename: JARVIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "requests>=2.31",
    "flask>=3.0",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "mss>=9.0",
    "plyer>=2.1",
]

[project.scripts]
jarvis = "main:main"
tcc    = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "modules*", "agent*"]
